# paranoid-requests

./: .pylintrc  Dockerfile  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  simple_requests_example.py
.github/workflows/: public_sources.yml  pylint.yml  pylint_and_test.yml  pytest.yml  test.yml
paranoid_requests/: __init__.py
paranoid_requests/paranoid_core/: __init__.py  proxy_list.py  public_proxy_list  public_proxy_list.py  user_agent_list.py
paranoid_requests/requests_wrapper/: __init__.py  wrapper.py
tests/: test_proxy_list.py  test_proxy_list_loader.py  test_public_lists.py  test_user_agent_loader.py
tests/artifacts/: test_bad_user_agents.json  test_bad_user_agents.txt  test_good_user_agents.json  test_proxies_bad.txt  test_proxies_good.txt
