[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "paranoid_requests"
authors = [{name = "Yablargo"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Yablargo/paranoid-requests"
